--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
+    "expo-file-system": "~17.0.1",
+    "expo-print": "^13.0.1",
+    "expo-sharing": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-fs": "^2.20.0",
     "react-native-paper": "^5.12.5",
+    "react-native-share": "^10.2.1",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
