--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
     "@types/react": "~18.2.79",
+    "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "expo": "~51.0.28",
     "expo-file-system": "~17.0.1",
     "expo-print": "^13.0.1",
     "expo-sharing": "^12.0.1",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.19.2",
+    "firebase": "^10.13.0",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.18.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-fs": "^2.20.0",
@@ -26,5 +36,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
